# dlthub_poc

./: README.md  pyproject.toml
dlthub_poc/: gcs_test.py  pipeline_mongodb_to_duckdb.py
dlthub_poc/.dlt/: .sources  config.toml
docker/: docker-compose.yml  entrypoints.sh
